@@ -1,3 +1,6 @@
+01/05/2021
+-   Fixed faction achievements
+
 10/04/2021
 -   Added challenge: Extreme resistance
 -   Added anti damage-reduction weapons
